[gd_scene load_steps=5 format=3 uid="uid://bs3sjpjk6uwrh"]

[ext_resource type="Script" uid="uid://bjtmsnuxraqgh" path="res://Scripts/hud.gd" id="1_8mn4d"]
[ext_resource type="Texture2D" uid="uid://c6rtxnnmrjaok" path="res://Assets/Textures/UI/ScoreBox.png" id="1_otrk1"]
[ext_resource type="Texture2D" uid="uid://d1ee8qg31apy3" path="res://Assets/Textures/UI/PauseBtn.png" id="2_nd4s1"]

[sub_resource type="LabelSettings" id="LabelSettings_ovq10"]
font_size = 36
font_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8mn4d")

[node name="TopBarBG" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.45098)

[node name="TopBar" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="TopBar"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 297.0
offset_bottom = 86.0
texture = ExtResource("1_otrk1")
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 24.0
offset_top = 27.0
offset_right = 279.0
offset_bottom = 77.0
text = "0"
label_settings = SubResource("LabelSettings_ovq10")
horizontal_alignment = 2
vertical_alignment = 1

[node name="PauseButton" type="TextureButton" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_bottom = 89.0
grow_horizontal = 0
texture_normal = ExtResource("2_nd4s1")
stretch_mode = 3
